--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/Tubaleviao/sleep-tracker/issues"
   },
-  "homepage": "https://github.com/Tubaleviao/sleep-tracker#readme"
+  "homepage": "https://github.com/Tubaleviao/sleep-tracker#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "html": "^1.0.0",
+    "mongodb": "^3.5.9",
+    "socket.io": "^2.3.0"
+  }
 }
